    - Fix the need for an operations name to be in the format <something>.<create/start/stop/delete> (Aria Tosca)
    - Add connect Security Groups to Instance via InstanceConnectedToSecurityGroup relationship
    - Support adding VPC Peering Connection + Use external routes
    - Fix bug that disassociate the wrong elastic ip from its instance
1.5.1:
    - Support Windows instances with init_script agent installation method.
1.5.1.1:
    - Fix bug when init_script is empty string.
1.5.1.2:
    - Execute user-provided user data before agent install user data.
2.0.0:
    - Update aws plugin node types
    - Update python aws boto to boto3
    - Add blueprint examples that covers all node types for the plugin
    - Update integration tests
2.0.1:
    - Support attach external address to nic.
2.0.2:
    - Support multiple subnet attachments to network acl.
2.1.0:
    - Make Resource Naming Resolution consistent across the plugin.
2.2.0:
    - Add resumable support to operations
2.2.1:
    - Fix bug when delete EC2 instance
2.3.0:
    - Add new EBS relationship to attach ebs volume to EC2 instance
2.3.1:
    - Upgrade Boto3 version
    - Add EKS Support
2.3.2:
    - Notify users of possible NTP sync issue when authentication error occurs.
2.3.3:
    - Python 3 Compatibility.
2.3.4:
    - Update AZ regex.
2.3.5:
    - Update wagon builder to py2py3 wagon.
    - Add 5.1.0 integration tests.
2.4.0:
    - Add AvailabilityZone Retry logic if the zone selected is not available
2.4.1:
    - Allow users to use already allocated IPs.
2.4.2:
    - Handle Issue with Exception with no message attribute.
2.4.3:
    - Correct build system bug.
2.4.4:
    - Handle non string tags.
2.5.0:
    - Added AWS codepipeline support.
2.5.1:
    - Fix bug that mandated providing S3 LocationConstraint.
2.5.2:
    - Fix bug causing API error messages to not print properly.
2.5.3:
    - Fix bug causing routing tables with no associations to fail on deletion.